<resources>
    <string name="app_name">NERVE</string>
    <string name="app_directory">com.hacks4snacks.nerve</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_food">Food</string>
    <string name="action_calendar">Calendar</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_day">Day</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_time_line">TimeLine</string>
    <string name="seizure_decected">SEIZURE\n<b>DETECTED</b></string>
    <string name="seizure_in_progress">SEIZURE IN\n<b>PROGRESS</b></string>
    <string name="doubletap">Double tap to cancel</string>
    <string name="title_activity_time_line_layout">TimeLineLayout</string>
    <string name="title_activity_prifile">Prifile</string>
    <string name="title_activity_seizure_detected">SeizureDetected</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="connect_with_nerve_sensor">CONNECT WITH <b>NERVE</b> SENSOR</string>
    <string name="manage_nerve_account">MANAGE YOUR <b>NERVE</b> ACCOUNT</string>
    <string name="manage_medicines">MANAGE <b>MEDICINES</b></string>
    <string name="manage_food">MANAGE <b>FOOD</b></string>
    <string name="calendar"><b>CALENDAR</b></string>

    <string name="add_new_meal">ADD NEW MEAL</string>
    <string name="current_date">01.03.2018</string>

    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="name_child">WILHELM </string>
    <string name="surname_child">ZDOBYWCA</string>
    <string name="child_name">WILHELM <b>ZDOBYWCA</b></string>
    <string name="needs_help"><b>Wilhelm</b> needs help!</string>
    <string-array name="profile_info">
        <item>Born:</item>
        <item>Sex:</item>
        <item>Weight:</item>
        <item>Height:</item>
        <item>First Seizure:</item>
        <item>Type of Epilepsy:</item>
        <item>Last Medicine</item>
        <item>Taken Medicine:</item>
        <item>Last Seizure:</item>
    </string-array>
    <string name="profile_born">01.01.2017</string>
    <string name="profile_sex">Male</string>
    <string name="profile_weight">9.9 kg</string>
    <string name="profile_height">76.9 cm</string>
    <string name="profile_first_seizure">02.05.2017</string>
    <string name="profile_epilepsy_type">Generalized Epilepsy</string>
    <string name="profile_last_medicine">Wednesday, 07 February 2018, 12:45</string>
    <string name="profile_taken_medicine">Nutrivil, 200 mg</string>
    <string name="profile_last_seizure">Wednesday, 07 February 2018, 15:45</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_manage_account">ManageAccount</string>
    <string name="title_activity_account_manage">AccountManage</string>
    <string name="title_activity_manage">Manage</string>
    <string name="title_activity_manage_accounts">ManageAccounts</string>
    <string name="title_activity_meal">MealActivity</string>
</resources>
