<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--tools:context=".MainActivity">-->
    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="200"
        android:title="@string/action_calendar"
        android:background="@drawable/button2"
        android:icon="@drawable/u3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="300"
        android:title="@string/action_profile"
        android:background="@drawable/button2"
        android:icon="@drawable/u4"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        android:background="@drawable/button"
        android:icon="@drawable/u5"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_food"
        android:background="@drawable/button"
        android:icon="@drawable/u6"
        android:orderInCategory="401"
        android:title="@string/action_food" />
</menu>